--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 
 </head>
 
+<style>
+  body {
+    font-family: 'Amarna', cursive;
+  }
+</style>
+
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
